fix android compiling errors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Header Files" FILES ${HEAD
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source Files" FILES ${SOURCE_FILES})
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Resources Files" FILES ${RESOURCES_FILES})
 
+if (NOT ANDROID)
 # Crear el ejecutable
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCES_FILES})
 
@@ -32,3 +33,8 @@ elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     # Verifica si realmente necesitas una compilación estática
     target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
 endif()
+else ()
+    add_library(${PROJECT_NAME} SHARED "${HEADER_FILES}" "${SOURCE_FILES}")
+    target_link_libraries(${PROJECT_NAME} SDL2::SDL2 ZLIB::ZLIB ${OPENGL_opengl_LIBRARY}
+            OpenAL::OpenAL ${HASH_LIBRARY_TGT_NAME})
+endif ()
