compiling fixes for Android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(OpenAL REQUIRED)
 find_package(OpenGL REQUIRED)
 
 # Global identifiers for each project/target
-set(HASH_LIBRARY_TGT_NAME           Hash-Library)
+set(HASH_LIBRARY_TGT_NAME           wolfesteinrpg-Hash-Library)
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/src")
 add_subdirectory("${PROJECT_SOURCE_DIR}/third_party_libs/hash-library")
