stl ttf rendering support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,5 +36,5 @@ endif()
 else ()
     add_library(${PROJECT_NAME} SHARED "${HEADER_FILES}" "${SOURCE_FILES}")
     target_link_libraries(${PROJECT_NAME} SDL2::SDL2 ZLIB::ZLIB ${OPENGL_opengl_LIBRARY}
-            OpenAL::OpenAL ${HASH_LIBRARY_TGT_NAME} log)
+            OpenAL::OpenAL ${HASH_LIBRARY_TGT_NAME} ${SDL2_TTF_LIBRARY} ${TRANSLATOR_LIBRARY} log)
 endif ()
